# reusable-services

./: .codeclimate.yml  .gitattributes  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  renovate.json5  reusable-services.code-workspace  test.sh  tox.ini
.circleci/: config.yml
adapter/: Dockerfile  build.ninja  docker-compose.yml  interface.go  test.sh
adapter/db/mongodb/: count.go  count_test.go  db.go  delete.go  delete_test.go  find.go  find_test.go  insert.go  insert_test.go  mongodb_suite_test.go  replace.go  update.go  update_test.go
adapter/mocks/: adapter.go  mocks.go
auth/crypto/: build.ninja  types.go
auth/crypto/mocks/: types.go
auth/proto/: build.ninja  models.proto  services.proto
auth/rpc/: models.pb.go  services.pb.go
auth/server/: models.go  regist.go  regist_test.go  server.go  server_suite_test.go
auth/vldfuncs/: base36.go  dbunique.go  recaptcha.go
email/proto/: build.ninja  services.proto
email/rpc/: services.pb.go
email/rpc/mocks/: services.go
email/sendfuncs/: build.ninja  interface.go  mailgun.go  mailgun_test.go  sendfuncs_suite_test.go
email/sendfuncs/mocks/: mailgun.go
email/server/: send.go  send_test.go  server.go  server_suite_test.go
errors/: invalid_type.go  no_id_found.go  notfound.go
log/: interface.go  zap.go
log/mocks/: mocks.go
random/: text.go  text_test.go
render/go/errors/: no_template_found.go
render/go/interfaces/: build.ninja  genninja.sh  template.go
render/node/: .eslintrc.yml  index.js  package-lock.json  package.json  test.js
render/proto/: genninja.sh  models.proto  services.proto
render/py/: Dockerfile  pyproject.toml  test.sh  tox.ini
render/py/reusable_services/render/rpc/: __init__.py  models_pb2.py  services_pb2.py
render/py/reusable_services/render/server/: __init__.py  server.py
render/py/rpc/: __init__.py  models_pb2.py  services_pb2.py  services_pb2_grpc.py
render/py/server/: __init__.py
render/py/tests/: __init__.py  test_render.py
render/rpc/: models.pb.go  services.pb.go
timeout/: timeout.go
token/proto/: .gitignore  build.ninja  genninja.sh  model.proto  service.proto
token/rpc/: model.pb.go  service.pb.go
token/server/: clean.go  models.go  pop.go  pop_test.go  push.go  push_test.go  server.go  server_suite_test.go
(+11 files in other folders)
