[tool.poetry]
name = "reusable-services"
version = "0.1.0"
description = "A reusable services"
authors = ["Hiroaki Yamamoto <hiroaki@hysoftware.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.1"
grpcio-tools = "^1.27.2"
tox = "^3.14.5"
mypy = "^0.761"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
flake8-commas = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
